--- a/src/styles/view.css
+++ b/src/styles/view.css
@@ -96,7 +96,7 @@
 }
 
 /* Content Styles */
-.task-item-content {
+.task-content {
 	flex: 1;
 	display: flex;
 	flex-direction: column;
@@ -476,10 +476,20 @@
 	text-overflow: ellipsis;
 }
 
+.task-item-container {
+	flex: 1;
+}
+
+.task-item-metadata {
+	display: flex;
+	align-items: center;
+	gap: 12px;
+	margin-top: var(--size-2-2);
+}
+
 .task-due-date {
-	margin-left: 12px;
-	font-size: 0.9em;
-	color: var(--text-muted);
+	font-size: var(--font-ui-smaller);
+	color: var(--text-faint);
 	white-space: nowrap;
 }
 
