--- a/src/styles/tag-view.css
+++ b/src/styles/tag-view.css
@@ -62,6 +62,10 @@
 	flex: 1;
 	overflow-y: auto;
 	padding: var(--size-4-2);
+
+	display: flex;
+	flex-direction: column;
+	gap: var(--size-2-1);
 }
 
 .tag-list-item {
