style: open details should not show day left column

--- a/src/styles/calendar.css
+++ b/src/styles/calendar.css
@@ -141,6 +141,8 @@
 	color: var(--text-on-accent);
 }
 
-.task-genius-container:has(.task-details.visible) .forecast-left-column {
-	display: none;
+@media (max-width: 1400px) {
+	.task-genius-container:has(.task-details.visible) .forecast-left-column {
+		display: none;
+	}
 }
